--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -51,7 +51,7 @@ digital-vouchers-notification .alert-dismissible {
 }
 
 digital-vouchers-notification .alert .btn {
-  padding: 3px;
+  padding: 5px;
   border-radius: 10px;   
 }
 
@@ -211,18 +211,28 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
 .digitalVouchersApplied, .digitalVouchersAvailable, .digitalVouchersAppliedAvailable {
   border-radius: 10px;
   padding: 10px;
-  width: 99%;
+  width: 95%;
   margin: 0 auto;
 }
 
 @media (max-width: 900px) {
   digital-vouchers-notification .alert {
     flex-direction: column;
-    gap: 0;
+    gap: 0.5rem;
   }
 
   digital-vouchers-notification .alert .btn {
     background: transparent !important;
+  }
+}
+
+@media (max-width: 1280px) {
+  digital-voucher .card .cutaway.left, digital-vouchers-applied .card .cutaway.left, digital-vouchers-available .card .cutaway.left, digital-vouchers-applied-available .card .cutaway.left {
+    left: -1%;
+  }
+  
+  digital-voucher .card .cutaway.right, digital-vouchers-applied .card .cutaway.right, digital-vouchers-available .card .cutaway.right, digital-vouchers-applied-available .card .cutaway.right {
+    right: -1%;
   }
 }
 
