--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -73,7 +73,7 @@ digital-vouchers-panel h4 {
   font-size: 1.2rem;
 }
 
-.digitalVouchers digital-voucher, .digitalVouchersApplied digital-vouchers-applied, .digitalVouchersAvailable digital-vouchers-available, .digitalVouchersAppliedAvailable digital-vouchers-applied-available {
+.digitalVouchers digital-voucher, .digitalVouchersApplied , .digitalVouchersAvailable digital-vouchers-available, .digitalVouchersAppliedAvailable digital-vouchers-applied-available {
   border-radius: 10px;
   min-width: 32%;
   max-width: 32%;
@@ -187,6 +187,10 @@ digital-vouchers-applied-available .card .card-bottom,
 digital-vouchers-applied-available .card .card-text,
 digital-vouchers-applied-available .card .card-title .title {
   padding: 0px 20px;
+}
+
+digital-vouchers-applied .card .card-bottom {
+  margin-bottom: 10px;
 }
 
 digital-voucher .card .card-title .promotion, digital-vouchers-applied .card .card-title .title, digital-vouchers-available .card .card-title .title, digital-vouchers-applied-available .card .card-title .title {
