--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -42,17 +42,20 @@ digital-vouchers-notification .alert {
   gap: 2em;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-digital-vouchers-notification .alert-dismissible {
-  padding-right: 0;
 }
 
 digital-vouchers-notification .alert .btn {
   padding: 3px;
-  border-radius: 10px;   
+  font-size: 14px; 
+}
+
+digital-vouchers-notification .alert {
+  padding: .3rem 1.25rem;
+}
+
+
+digital-vouchers-notification .alert-dismissible {
+  padding-right: 0;
 }
 
 digital-vouchers-notification .alert-dismissible .close {
