--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -42,6 +42,8 @@ digital-vouchers-notification .alert {
   gap: 2em;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 digital-vouchers-notification .alert .btn {
