--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -61,8 +61,8 @@ header .suggestions-result div a:hover {
 
 
 header .suggestions-result {
-  left: 140px;
-  width: calc(100% - 11.5em);
+  /*left: 140px;*/
+  width: calc(100% - 3.2em)
 	max-height: 500px;
 	overflow: auto;
 	border-bottom-left-radius: 0;
