--- a/home-branch-range/style.css
+++ b/home-branch-range/style.css
@@ -105,6 +105,7 @@ header.shopping-header .greeting {
 #mini-trolley .clickAndCollectBranch {
   font-weight: 900;
   color: #C98D05;
+  font-size: 12px;
 }
 
 #mini-trolley .deliveryBranch {
