--- a/home-branch-range/productlist/extendedrange/style.css
+++ b/home-branch-range/productlist/extendedrange/style.css
@@ -244,6 +244,10 @@ header#shopping-header-desktop .homeBranchRangeBtnDiv .btn:hover {
   border-top: 0;
 }
 
+#changeBranchModal {
+  padding-right: 5px;
+}
+
 #changeBranchModal .branches-result .table tbody tr.selected {
   background: #F5F5F5;
 }
