--- a/presell/front-end/bookertest-bundles.css
+++ b/presell/front-end/bookertest-bundles.css
@@ -35535,18 +35535,15 @@ header#shopping-header-desktop #mini-trolley #delivery {
 }
 
 
-/*main#presell_button .desktop-view .product-quantity-date-header p {
+main#presell_button .desktop-view .product-quantity-date-header p {
     font-size: 10px;
 }
 
 
-main#presell_button .desktop-view .product-quantity-date-header {
+main#presell_button .desktop-view .product-quantity-date-header, main#presell_button .mobile-view .product-quantity-date-header, main#presell_button .desktop-view .product-quantity-date, main#presell_button .mobile-view .product-quantity-date {
     max-width: 12.5%;
 }
 
-main#presell_button .desktop-view .product-quantity-date {
-    width: -webkit-fill-available;
-}
 
 main#presell_button .mobile-view .product .product-details .product-name-priceMarked {
     height: inherit;
@@ -35584,10 +35581,6 @@ label[for="agreeTsAndCsCheck"] a {
     width: 100%
 }
 
-main#presell_button .mobile-view .product-quantity-date-header {
-    width: min-content;
-}
-
 .product-image img {
     max-height: 96px;
 }
@@ -35595,13 +35588,10 @@ main#presell_button .mobile-view .product-quantity-date-header {
 @media (max-width: 1150px) {
 
     main#presell_button .mobile-view .product-quantity-date .plus-minus-icon {
-        width: 1em;
-        height: 1em;
+        width: 1em !important;
+        height: 1em !important;
     }
 
-    main#presell_button .mobile-view .product .product-quantity-date {
-        width: 0;
-    }
 }
 
 @media (max-width: 675px) {
@@ -35615,7 +35605,7 @@ main#presell_button .mobile-view .product-quantity-date-header {
         flex: auto;
         max-width: none;
     }
-}*/
+}
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
